// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Box /> renders correctly 1`] = `
<div
  className="css-gw9lkm"
  color="text"
  fontFamily="body"
  fontSize={1}
  fontWeight="body"
  onBlur={[Function]}
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
/>
`;

exports[`<Box with props /> renders correctly with props 1`] = `
<div
  className="css-1k6zb8a"
  color="black"
  fontFamily="body"
  fontSize={16}
  fontWeight="body"
  height={90}
  onBlur={[Function]}
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  width={600}
/>
`;
